# rust-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.cloud  Makefile  README.md  pyproject.toml  run.py
data/sample_transcripts/: acme_q3_2025.txt  globalhealth_investor_day_2025.txt  techflow_q2_2025.txt
rag_preprocessing/: __init__.py  pipeline.py  steps.py
src/: lib.rs
