[package]
name = "rag_rust_core"
version = "0.1.0"
edition = "2021"
description = "Rust-powered text processing for RAG pipelines"
license = "Apache-2.0"

[lib]
name = "rag_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1.10"
unicode-normalization = "0.1"
