[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rag_rust_core"
version = "0.1.0"
description = "Rust-powered text processing for RAG pipelines with ZenML"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "zenml>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0,<2.0",
]

[tool.maturin]
python-source = "."
module-name = "rag_rust_core"
features = ["pyo3/extension-module"]
